fixed spinner error

--- a/index.html
+++ b/index.html
@@ -1596,11 +1596,18 @@
             isSpinning2 = true;
             spinBtn2.classList.add("spinning");
 
+            const spins = 5 + Math.floor(Math.random() * 3);
+            const extra = Math.floor(Math.random() * 360);
+            const total = (spins * 360) + extra;
+
+            rotation2 += total;
+            wheel2.style.transform = `rotate(${rotation2}deg)`;
+
             setTimeout(() => {
 
             const normalized = (rotation2 + 106) % 360;
 
-            const angle = (360 - normalized + 36) % 360;
+            const angle = (360 - normalized + 32) % 360;
 
             const segment = Math.floor(angle / 72);
             const prizeIndex = segment % 5;
