--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@
             align-items: center;
             font-size: 15px;
             justify-content: center;
-            width: 40px;
-            height: 40px;
+
             position: absolute;
             top: 8px;
             right: 8px;
@@ -306,12 +305,6 @@
         #noThanksBtn, #emailBackBtn{
         background-color: #d3d3d3 !important;
         color: #333 !important;
-        }
-
-        #emailBackBtn{
-            margin: auto;
-            text-align: center;
-            margin-top: 20px;
         }
 
         /* YOU WIN state */
@@ -684,7 +677,7 @@
 
         .buttons-flex{
             display:flex;
-            justify-content: space-between;
+            justify-content: center;
             gap: 20px;
         }
 
@@ -811,28 +804,25 @@
                     <div id="radioContainer" class="radio-group hide"></div>
                     <div id="emailField" class="hide">
                         <div class="email-glow-wrap">
+                            <input type="text" id="nameInput" placeholder="Please enter your name">
+                        </div><br>
+                        <div class="email-glow-wrap"style="margin-top: 20px;">
                             <input type="email" id="emailInput" placeholder="Please enter your email">
                         </div>
 
-                        <button id="emailSubmitBtn" type="button" class="email-button">
-                            <p style="display: flex; align-items: center; gap: 10px; padding: 0;
-                                margin: 0;"><svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                fill="none"
-                                viewBox="0 0 74 74"
-                                height="35"
-                                width="35"
-                            >
-                                <circle stroke-width="3" stroke="white" r="35.5" cy="37" cx="37"></circle>
-                                <path
-                                fill="white"
-                                d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z"
-                                ></path>
-                            </svg></p>
-                        </button>
-                        <button id="emailBackBtn" type="button" class="button">
-                            <div class="wrap"><p>Back</p></div>
-                        </button>
+                        <div class="buttons-flex" style="margin-top: 20px;">
+                            <button id="emailSubmitBtn" type="button" class="button">
+                                <div class="wrap"><p>Submit</p></div>
+                            </button>
+                            <button id="emailBackBtn" type="button" class="button">
+                                <div class="wrap"><p>Back</p></div>
+                            </button>
+                        </div>
+
+                        <div id="nameError"
+                            style="color:#d73f09; font-size:0.9rem; margin-top:8px; display:none;">
+                            Please enter your name.
+                        </div>
                         <div id="emailError"
                             style="color:#d73f09; font-size:0.9rem; margin-top:8px; display:none;">
                             Please enter a valid email address.
@@ -975,13 +965,14 @@
         const round1Questions = [
             { label: "Which of the following best describes your role?", options:[
                 "OSU Faculty",
+                "University Faculty",
                 "Undergraduate Student",
                 "Graduate Student",
                 "Government Office",
                 "Other"
             ] },
             {
-                label: "Did your experience at this booth improve your impression of Oregon State University?",
+                label: "Did your experience at this booth improve your impression of Oregon State University and it’s research?",
                 options: [
                     "Neutral, no change of impression",
                     "Yes, somewhat improved",
@@ -995,6 +986,7 @@
                 label: "What brought you to the booth?",
                 options: [
                     "Cool Swag",
+                    "Interest in Oregon State University",
                     "Interest in Researchers",
                     "Interest in Research Institutes and Centers",
                     "R/V Taani Simulator"
@@ -1028,7 +1020,7 @@
             },
 
             {
-                label: "Would you be willing to share your experience in more detail?",
+                label: "Would you be willing to share your experience in more detail after the conference?",
                 options: ["Yes", "No"],
                 isEmailConditional: true
             },
@@ -1037,7 +1029,7 @@
         let questions = round1Questions;
         let qIndex = 0;
 
-        const answers = { role: "", experience: "", brought: "", email: "" };
+        const answers = { role: "", experience: "", brought: "", name: "", email: "" };
         let lastPrize = 0;
 
         const questionLabel = document.getElementById("questionLabel");
@@ -1117,6 +1109,7 @@
             radioContainer.classList.remove("checkbox-grid");
             formInner.classList.remove("tall-content");
             document.getElementById("emailField").classList.add("hide");
+            document.getElementById("nameInput").value = "";
             document.getElementById("emailInput").value = "";
             // Always hide elements by default
             submitButton.classList.add("hide");
@@ -1240,6 +1233,7 @@
 
             // Clear email
             document.getElementById("emailInput").value = "";
+            document.getElementById("nameInput").value = "";
 
             // Re-select NOTHING (force user to choose again)
             radioContainer.querySelectorAll(".radio-option").forEach(opt => {
@@ -1305,27 +1299,52 @@
 
         document.getElementById("emailSubmitBtn").addEventListener("click", () => {
             const emailField = document.getElementById("emailInput");
+            const nameField  = document.getElementById("nameInput");
+
             const email = emailField.value.trim();
-            const errorBox = document.getElementById("emailError");
+            const name  = nameField.value.trim();
 
-            // Simple but real validation
-            const isValid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+            const emailError = document.getElementById("emailError");
+            const nameError  = document.getElementById("nameError");
 
-            if (!isValid) {
-                errorBox.style.display = "block";
+            let valid = true;
+
+            // Email validation
+            const emailValid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+            if (!emailValid) {
+                emailError.style.display = "block";
                 emailField.style.boxShadow = "0 0 0 3px rgba(215,63,9,0.4)";
-                return; 
+                valid = false;
+            } else {
+                emailError.style.display = "none";
+                emailField.style.boxShadow = "";
             }
 
-            // Clear error
-            errorBox.style.display = "none";
-            emailField.style.boxShadow = "";
+            // Name validation
+            if (!name) {
+                nameError.style.display = "block";
+                nameField.style.boxShadow = "0 0 0 3px rgba(215,63,9,0.4)";
+                valid = false;
+            } else {
+                nameError.style.display = "none";
+                nameField.style.boxShadow = "";
+            }
 
+            if (!valid) return;
+
+            // Save values
             answers.email = email;
+            answers.name  = name;
 
-            // Continue survey
+            // Submit to advance to next question
             questionForm.dispatchEvent(new Event("submit", { cancelable: true }));
         });
+
+        document.getElementById("nameInput").addEventListener("input", () => {
+            document.getElementById("nameError").style.display = "none";
+            document.getElementById("nameInput").style.boxShadow = "";
+        });
+
         document.getElementById("emailInput").addEventListener("input", () => {
             document.getElementById("emailError").style.display = "none";
             document.getElementById("emailInput").style.boxShadow = "";
@@ -1632,8 +1651,10 @@
             answers.role = "";
             answers.experience = "";
             answers.brought = "";
+            answers.name = "";
             answers.email = "";
             document.getElementById("emailInput").value = "";
+            document.getElementById("nameInput").value = "";
             document.getElementById("emailField").classList.add("hide");
             radioContainer.classList.remove("hide");
 
@@ -1659,6 +1680,7 @@
                     role: answers.role,
                     experience: answers.experience,
                     brought: answers.brought,
+                    name: answers.name,
                     email: answers.email
                 });
             }
