--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                 "Other"
             ] },
             {
-                label: "Did your experience at this booth improve your impression of Oregon State University and it’s research?",
+                label: "Did your experience at this booth improve your impression of Oregon State University and its research?",
                 options: [
                     "Neutral, no change of impression",
                     "Yes, somewhat improved",
